HEAD
	+ bug fix: l7 filter rules need to be added to both external and internal
	interfaces to be able to detect traffic properly
	+ Add model to set upload/download rate fields for gateways. This allows
	users to use this module with DHCP configured gateways
1.1.20
	+ fix regression introduced when firewall was changed to execute iptables command
at once
1.1.10
	+ Bugfix:Enable module depends on firewall as well as network in order to work
1.1
	+ Use the new row() and ids() API
1.0.1
	+ Enable module depends on firewall as well as network
0.12.101
	+ Detect if there's a l7 capable kernel using modinfo xt_layer7
0.12.100
	+ Add traffic shaping rules to POSTROUTING 
0.12.99
	+ New release
0.12.2
	+ Add support for l7filter
0.12.1
	+ Bugfix. Fetch value from rate properly
0.12
	+ Add field help to model
0.11.104
	+ Do not return a "removed message" with 0 rows removed
0.11.104
	+ Bugfix. Return empty array and not undef if there are no rules
0.11.103
	+ Bugfix. Extend IptablesRule from Firewall to add setReverseService.
	  To properly add ingress rules
0.11.102
	+ Use the new EBox::Model:Row api
	+ Do not order iptables rules by priority
0.11.101
	+ Fixing typo in actions performed by the module
0.11.100
	+ Rules are introduced into a ordered table
0.11.99
	+ eBox -> internal networks traffic flow is not shaped
	anymore
	+ Exposing API from models
	+ Removing old code to decrease the module complexity and LOC by
	more than 500 lines
	+ Traffic shaping rules may be enabled/disabled by user 
0.11
	+ Difference easily internal/external interfaces through GUI
	+ Normalizing guaranteed rates from two or more rules now works
	correctly under rate decreasing 
	+ Warning about a change on gateways when there is at least a rule
	on internal interfaces models
	+ Bugfix: Rates are now checked if the source or destination is an
	object
0.10.99
	+ Use last model/view changes to get rid of the multitable code
	+ Remove rules using an object when it's removed
	+ Use services module