@@ -3,6 +3,8 @@ HEAD
 	interfaces to be able to detect traffic properly
 	+ Add model to set upload/download rate fields for gateways. This allows
 	users to use this module with DHCP configured gateways
+	+ bug fix: traffic shaping chains are resetted to all interfaces
+	when l7 protocosl are available
 1.1.20
 	+ fix regression introduced when firewall was changed to execute iptables command
 at once
